<resources>
    <string name="app_name">MyCalculator</string>
    <string name="buttonAC_text">AC</string>
    <string name="buttonCloseBracket_text">)</string>
    <string name="buttonOpenBracket_text">(</string>
    <string name="buttonDivide_text">/</string>
    <string name="button7_text">7</string>
    <string name="button8_text">8</string>
    <string name="button9_text">9</string>
    <string name="buttonMul_text">x</string>
    <string name="button4_text">4</string>
    <string name="button5_text">5</string>
    <string name="button6_text">6</string>
    <string name="buttonSub_text">-</string>
    <string name="button1_text">1</string>
    <string name="button2_text">2</string>
    <string name="button3_text">3</string>
    <string name="buttonAdd_text">+</string>
    <string name="button0_text">0</string>
    <string name="buttonDot_text">.</string>
    <string name="buttonEqual_text">=</string>
</resources>