<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewSolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:layout_margin="15dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"

        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:text="0"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:orientation="vertical"
        android:padding = "17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonAC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"

                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF5722"
                android:text="@string/buttonAC_text"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonOpenBracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#E0A4E3"
                android:text="@string/buttonOpenBracket_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonCloseBracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#E0A4E3"
                android:text="@string/buttonCloseBracket_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/buttonDivide_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button7_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button8_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button9_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonMul"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/buttonMul_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button4_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button5_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button6_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonSub"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/buttonSub_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button1_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button2_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button3_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/buttonAdd_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button0_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/buttonDot_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonBackSpace"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:drawableLeft="@drawable/ic_baseline_backspace_24"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#1C7FEF"
                android:text="@string/buttonEqual_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>